Fix justify-content in .header and add gap

--- a/style.css
+++ b/style.css
@@ -55,7 +55,8 @@ body {
 .header {
     display: flex;
     align-items: baseline;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 560px;
 }
 
 .links {
